score's code smell text